--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -20,7 +20,7 @@ header {
 .header__block__background {
   position: absolute;
   top: 13.3rem;
-  left: -10rem;
+  left: -17rem;
   z-index: 2;
 
   @media (max-width: $tablet-width) {
