--- a/src/sass/components/_skills.scss
+++ b/src/sass/components/_skills.scss
@@ -9,7 +9,6 @@
   column-gap: 3rem;
 
   position: relative;
-  overflow-x: hidden;
 
   @media (max-width: 1400px) {
     column-gap: 0.2rem;
@@ -58,22 +57,11 @@
   }
 }
 
-/*
-.skill__experience {
-  color: $color-secondary;
-  @extend %font-primary;
-  @include font($size: 1.8rem, $height: 2.8rem, $weight: 500);
-
-  @media (max-width: $mobile-width) {
-    @include font($size: 1.6rem, $height: 2.6rem, $weight: 500);
-  }
-}
-*/
-
 .skills__block__background {
   position: absolute;
-  right: -13.9rem;
   bottom: 11.3rem;
+  right: -16rem;
+  z-index: 2;
 
   @media (max-width: $mobile-width) {
     right: -12rem;
